--- a/pomodoro/src/styles/global.css
+++ b/pomodoro/src/styles/global.css
@@ -6,11 +6,14 @@
 
 :root{
     --white:#fff;
-    --background: #F2F3F5;
+    /*--background: #F2F3F5;*/
+    --background: #3b3b3d;
     --gray-line: #DCDDE0;
-    --text: #666666;
+    /*--text: #666666;*/
+    --text: #F2F3F5;
     --text-highlight: #B3B9FF;
-    --title: #2E384D;
+    /*--title: #2E384D;*/
+    --title: #ffffff;
     --red: #E83F5B;
     --green: #4CD62B;
     --blue: #5965E0;
@@ -24,7 +27,7 @@
     }
 }
 
-@media(max-width: 720){
+@media(max-width: 720px){
     html {
         font-size: 87.5%;
     }
@@ -46,14 +49,4 @@ button {
 a {
     color: inherit;
     text-decoration: none;
-}
-
-.container {
-    height: 100vh;
-    max-width: 992px;
-    margin: 0 auto;
-    padding: 2.5rem 2rem;
-
-    display: flex;
-    flex-direction: column;
 }
