--- a/pomodoro/src/styles/components/Countdown.module.css
+++ b/pomodoro/src/styles/components/Countdown.module.css
@@ -62,6 +62,23 @@
     transition: background-color 0.2s ;
 }
 
-.countdownButton:hover {
+.countdownButton:not(:disabled):hover {
     background: var(--blue-dark);
+}
+
+.countdownButtonActive {
+    background: var(--white);
+    /*color: var(--white); -> cor original*/
+    color: var(--blue-dark);
+}
+
+.countdownButtonActive:not(:disabled):hover {
+    background: var(--red);
+    color: var(--title);
+}
+
+.countdownButton:disabled {
+    background: var(--white);
+    color: var(--blue-dark);
+    cursor: not-allowed;
 }
