--- a/pomodoro/src/styles/global.css
+++ b/pomodoro/src/styles/global.css
@@ -7,7 +7,7 @@
 :root{
     --white:#fff;
     /*--background: #F2F3F5; -> cor original*/
-    --background: #3b3b3d;
+    --background: #282a36;
     --gray-line: #DCDDE0;
     /*--text: #666666; -cor original*/
     --text: #F2F3F5;
