--- a/pomodoro/src/styles/global.css
+++ b/pomodoro/src/styles/global.css
@@ -8,17 +8,19 @@
     --white:#fff;
     /*--background: #F2F3F5; -> cor original*/
     --background: #282a36;
+    --background-secondary: #44475a;
     --gray-line: #DCDDE0;
     /*--text: #666666; -cor original*/
-    --text: #F2F3F5;
+    --text: #f8f8f2;
     --text-highlight: #B3B9FF;
     /*--title: #2E384D; -cor original */
-    --title: #ffffff;
+    --title: #8be9fd;
     --red: #E83F5B;
     --green: #4CD62B;
     --blue: #5965E0;
     --blue-dark: #4953b8;
     --blue-twitter: #2AA9E0;
+    --pink: #ff79c6;
 }
 
 @media(max-width: 1080px){
