--- a/pomodoro/src/styles/components/ChallengeBox.module.css
+++ b/pomodoro/src/styles/components/ChallengeBox.module.css
@@ -1,8 +1,8 @@
 .challengeBoxContainer {
     height: 100%;
 
-    background: var(--white);
-    color: var(--blue-dark);/*adicionado devido ao meu darkmode*/
+    background: var(--background-secondary);
+    color: var(--text);/*adicionado devido ao meu darkmode*/
     border-radius: 5px;
     box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
     padding: 1.5rem 2rem;
@@ -65,8 +65,7 @@
 .challengeActive main strong {
     font-size: 2rem;
     font-weight: 600;
-    /*color: var(--title); -> cor original*/
-    color: var(--blue-dark);
+    color: var(--title);
     margin: 1.5rem 0 1rem;
 }
 
