--- a/pomodoro/src/styles/components/Countdown.module.css
+++ b/pomodoro/src/styles/components/Countdown.module.css
@@ -3,8 +3,7 @@
     align-items: center;
     font-family: Rajdhani;
     font-weight: 600;
-    /*color: var(--title); -> cor original*/
-    color: var(--blue-dark);
+    color: var(--title);
 }
 
 .countdownContainer > div {
@@ -14,7 +13,7 @@
     align-items: center;
     justify-content: space-between;
 
-    background: var(--white);
+    background: var(--background-secondary);
     box-shadow: 0 0 60px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
     font-size: 8.5rem;
@@ -26,13 +25,11 @@
 }
 
 .countdownContainer > div span:first-child {
-    /*border-right: 1px solid #f0f1f3; -> cor original*/
-    border-right: 1px solid #3b3b3d;
+    border-right: 1px solid var(--background);
 }
 
 .countdownContainer > div span:last-child {
-    /*border-left: 1px solid #f0f1f3; -> cor original*/
-    border-left: 1px solid #3b3b3d;
+    border-left: 1px solid var(--background);
 }
 
 .countdownContainer > span {
@@ -50,10 +47,11 @@
     align-items: center;
     justify-content: center;
 
-    border: 0;
+    border: 1;
+    border-color: var(--white);
     border-radius: 5px;
 
-    background: var(--blue);
+    background: var(--background);
     color: var(--white);
 
     font-size: 1.25rem;
@@ -63,23 +61,21 @@
 }  
 
 .countdownButton:not(:disabled):hover {
-    background: var(--blue-dark);
+    background: var(--background-components);
 }
 
 .countdownButtonActive {
-    background: var(--white);
-    /*color: var(--white); -> cor original*/
-    color: var(--blue-dark);
+    background: var(--background);
+    color: var(--pink);
 }
 
 .countdownButtonActive:not(:disabled):hover {
-    background: var(--red);
-    color: var(--title);
+    background: var(--background-components);
 }
 
 .countdownButton:disabled {
-    background: var(--white);
-    /*color: var(--blue-dark); -> cor original*/
-    color: var(--blue-dark);
+    background: var(--background);
+    color: var(--text);
     cursor: not-allowed;
+    border: 0;
 }
